#T20838 upgrade gradle/libs + code changes